--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -9,91 +9,114 @@
 	<div class="tabs">
 		<div id="submission" class="tab-content active">
 			<div class="comment">
-                <pre>{{#if this.submission.comment}}{{this.submission.comment}}{{else}}Keine Abgabe.{{/if}}</pre>
-			</div>
-			<div class="material card">
-				<ul>
-					<li>
-						<img src="http://placehold.it/100x80"/>
-						<p class="title">ExtraLongFilename.html</p>
-						<div class="buttons">
-							<a class="download" href="#"><i class="fa fa-cloud-download" aria-hidden="true"></i></a>
-						</div>
-						<div class="buttons">
-							<a class="download" href="#"><i class="fa fa-cloud-download" aria-hidden="true"></i></a>
-						</div>
-					</li>
-				</ul>
+                {{#if this.submission.comment}}
+                    {{{this.submission.comment}}}
+                {{else}}
+                    Keine Abgabe.
+                {{/if}}
 			</div>
 		</div>
 
 		<div id="comment" class="tab-content">
-            {{#if this.submission}}
-                <form class="form" method="post" action="/homework/submit/{{this.submission._id}}">
-                    <input type="hidden" name="_method" data-force-value="true" value="patch" />
-            {{else}}
-                <form class="form" method="post" action="/homework/submit">
-                    <input type="hidden" name="_method" data-force-value="true" value="post" />
-                    <input name="schoolId" type="hidden" data-force-value="true" value="{{this.student.schoolId}}" />
-                    <input name="studentId" type="hidden" data-force-value="true" value="{{this.student._id}}" />
-                    <input name="homeworkId" type="hidden" data-force-value="true" value="{{@root._id}}" />
-            {{/if}}
+            {{#ifvalue @root.teacherId value=@root.currentUser._id}}
+                {{#if this.submission}}
+                    <form class="form" method="post" action="/homework/submit/{{this.submission._id}}">
+                        <input type="hidden" name="_method" data-force-value="true" value="patch" />
+                {{else}}
+                    <form class="form" method="post" action="/homework/submit">
+                        <input type="hidden" name="_method" data-force-value="true" value="post" />
+                        <input name="schoolId" type="hidden" data-force-value="true" value="{{this.student.schoolId}}" />
+                        <input name="studentId" type="hidden" data-force-value="true" value="{{this.student._id}}" />
+                        <input name="homeworkId" type="hidden" data-force-value="true" value="{{@root._id}}" />
+                {{/if}}
 
-			<div class="comment form-group">
-				<div class="form-group">
-					<label>Note</label>
-					<select name="grade" data-placeholder="Note auswählen">
-							<option value="">Keine Bewertung</option>
-						{{#if @root.courseId.gradeSystem}}
-							<option value="15" {{#ifvalue this.submission.grade value=15}} selected {{/ifvalue}}>1+</option>
-							<option value="14" {{#ifvalue this.submission.grade value=14}} selected {{/ifvalue}}>1</option>
-							<option value="13" {{#ifvalue this.submission.grade value=13}} selected {{/ifvalue}}>1-</option>
-							<option value="12" {{#ifvalue this.submission.grade value=12}} selected {{/ifvalue}}>2+</option>
-							<option value="11" {{#ifvalue this.submission.grade value=11}} selected {{/ifvalue}}>2</option>
-							<option value="10" {{#ifvalue this.submission.grade value=10}} selected {{/ifvalue}}>2-</option>
-							<option value="9" {{#ifvalue this.submission.grade value=9}} selected {{/ifvalue}}>3+</option>
-							<option value="8" {{#ifvalue this.submission.grade value=8}} selected {{/ifvalue}}>3</option>
-							<option value="7" {{#ifvalue this.submission.grade value=7}} selected {{/ifvalue}}>3-</option>
-							<option value="6" {{#ifvalue this.submission.grade value=6}} selected {{/ifvalue}}>4+</option>
-							<option value="5" {{#ifvalue this.submission.grade value=5}} selected {{/ifvalue}}>4</option>
-							<option value="4" {{#ifvalue this.submission.grade value=4}} selected {{/ifvalue}}>4-</option>
-							<option value="3" {{#ifvalue this.submission.grade value=3}} selected {{/ifvalue}}>5+</option>
-							<option value="2" {{#ifvalue this.submission.grade value=2}} selected {{/ifvalue}}>5</option>
-							<option value="1" {{#ifvalue this.submission.grade value=1}} selected {{/ifvalue}}>5-</option>
-							<option value="0" {{#ifvalue this.submission.grade value=0}} selected {{/ifvalue}}>6</option>
-						{{else}}
-							<option value="15" {{#ifvalue this.submission.grade value=15}} selected {{/ifvalue}}>15</option>
-							<option value="14" {{#ifvalue this.submission.grade value=14}} selected {{/ifvalue}}>14</option>
-							<option value="13" {{#ifvalue this.submission.grade value=13}} selected {{/ifvalue}}>13</option>
-							<option value="12" {{#ifvalue this.submission.grade value=12}} selected {{/ifvalue}}>12</option>
-							<option value="11" {{#ifvalue this.submission.grade value=11}} selected {{/ifvalue}}>11</option>
-							<option value="10" {{#ifvalue this.submission.grade value=10}} selected {{/ifvalue}}>10</option>
-							<option value="9" {{#ifvalue this.submission.grade value=9}} selected {{/ifvalue}}>9</option>
-							<option value="8" {{#ifvalue this.submission.grade value=8}} selected {{/ifvalue}}>8</option>
-							<option value="7" {{#ifvalue this.submission.grade value=7}} selected {{/ifvalue}}>7</option>
-							<option value="6" {{#ifvalue this.submission.grade value=6}} selected {{/ifvalue}}>6</option>
-							<option value="5" {{#ifvalue this.submission.grade value=5}} selected {{/ifvalue}}>5</option>
-							<option value="4" {{#ifvalue this.submission.grade value=4}} selected {{/ifvalue}}>4</option>
-							<option value="3" {{#ifvalue this.submission.grade value=3}} selected {{/ifvalue}}>3</option>
-							<option value="2" {{#ifvalue this.submission.grade value=2}} selected {{/ifvalue}}>2</option>
-							<option value="1" {{#ifvalue this.submission.grade value=1}} selected {{/ifvalue}}>1</option>
-							<option value="0" {{#ifvalue this.submission.grade value=0}} selected {{/ifvalue}}>0</option>
-						{{/if}}
-					</select>
-				</div>
-				<h6>Kommentar</h6>
-				<textarea id="evaluation" name="gradeComment" type="text" class="form-control" placeholder="Bewertungskommentar">{{this.submission.gradeComment}}</textarea>
-			</div>
-			<h6>Dateien</h6>
-			<div class="material card">
-				<ul>
-					<li>
-						<a class="add" href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-					</li>
-				</ul>
-			</div>
-			<button type="submit" class="btn btn-primary">Speichern</button>
-            </form>
+                <div class="comment form-group">
+                    <div class="form-group">
+                        <label>Note</label>
+                        <select name="grade" data-placeholder="Note auswählen">
+                                <option value="">Keine Bewertung</option>
+                            {{#if @root.courseId.gradeSystem}}
+                                <option value="15" {{#ifvalue this.submission.grade value=15}} selected {{/ifvalue}}>1+</option>
+                                <option value="14" {{#ifvalue this.submission.grade value=14}} selected {{/ifvalue}}>1</option>
+                                <option value="13" {{#ifvalue this.submission.grade value=13}} selected {{/ifvalue}}>1-</option>
+                                <option value="12" {{#ifvalue this.submission.grade value=12}} selected {{/ifvalue}}>2+</option>
+                                <option value="11" {{#ifvalue this.submission.grade value=11}} selected {{/ifvalue}}>2</option>
+                                <option value="10" {{#ifvalue this.submission.grade value=10}} selected {{/ifvalue}}>2-</option>
+                                <option value="9" {{#ifvalue this.submission.grade value=9}} selected {{/ifvalue}}>3+</option>
+                                <option value="8" {{#ifvalue this.submission.grade value=8}} selected {{/ifvalue}}>3</option>
+                                <option value="7" {{#ifvalue this.submission.grade value=7}} selected {{/ifvalue}}>3-</option>
+                                <option value="6" {{#ifvalue this.submission.grade value=6}} selected {{/ifvalue}}>4+</option>
+                                <option value="5" {{#ifvalue this.submission.grade value=5}} selected {{/ifvalue}}>4</option>
+                                <option value="4" {{#ifvalue this.submission.grade value=4}} selected {{/ifvalue}}>4-</option>
+                                <option value="3" {{#ifvalue this.submission.grade value=3}} selected {{/ifvalue}}>5+</option>
+                                <option value="2" {{#ifvalue this.submission.grade value=2}} selected {{/ifvalue}}>5</option>
+                                <option value="1" {{#ifvalue this.submission.grade value=1}} selected {{/ifvalue}}>5-</option>
+                                <option value="0" {{#ifvalue this.submission.grade value=0}} selected {{/ifvalue}}>6</option>
+                            {{else}}
+                                <option value="15" {{#ifvalue this.submission.grade value=15}} selected {{/ifvalue}}>15</option>
+                                <option value="14" {{#ifvalue this.submission.grade value=14}} selected {{/ifvalue}}>14</option>
+                                <option value="13" {{#ifvalue this.submission.grade value=13}} selected {{/ifvalue}}>13</option>
+                                <option value="12" {{#ifvalue this.submission.grade value=12}} selected {{/ifvalue}}>12</option>
+                                <option value="11" {{#ifvalue this.submission.grade value=11}} selected {{/ifvalue}}>11</option>
+                                <option value="10" {{#ifvalue this.submission.grade value=10}} selected {{/ifvalue}}>10</option>
+                                <option value="9" {{#ifvalue this.submission.grade value=9}} selected {{/ifvalue}}>9</option>
+                                <option value="8" {{#ifvalue this.submission.grade value=8}} selected {{/ifvalue}}>8</option>
+                                <option value="7" {{#ifvalue this.submission.grade value=7}} selected {{/ifvalue}}>7</option>
+                                <option value="6" {{#ifvalue this.submission.grade value=6}} selected {{/ifvalue}}>6</option>
+                                <option value="5" {{#ifvalue this.submission.grade value=5}} selected {{/ifvalue}}>5</option>
+                                <option value="4" {{#ifvalue this.submission.grade value=4}} selected {{/ifvalue}}>4</option>
+                                <option value="3" {{#ifvalue this.submission.grade value=3}} selected {{/ifvalue}}>3</option>
+                                <option value="2" {{#ifvalue this.submission.grade value=2}} selected {{/ifvalue}}>2</option>
+                                <option value="1" {{#ifvalue this.submission.grade value=1}} selected {{/ifvalue}}>1</option>
+                                <option value="0" {{#ifvalue this.submission.grade value=0}} selected {{/ifvalue}}>0</option>
+                            {{/if}}
+                        </select>
+                    </div>
+                    <h6>Kommentar</h6>
+                    <textarea id="evaluation" name="gradeComment" type="text" class="form-control customckeditor" placeholder="Bewertungskommentar">{{this.submission.gradeComment}}</textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Speichern</button>
+                </form>
+            {{else}}
+                {{#if @root.courseId.gradeSystem}}
+                    {{#ifvalue this.submission.grade value=0 }}<b class="grade">Note: 6</b>{{/ifvalue}}
+                    {{#if this.submission.grade}}
+                        <b class="grade">Note: 
+                        {{#ifvalue this.submission.grade value=0 }} 6{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=1 }}5-{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=2 }} 5{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=3 }}5+{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=4 }}4-{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=5 }} 4{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=6 }}4+{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=7 }}3-{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=8 }} 3{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=9 }}3+{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=10}}2-{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=11}} 2{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=12}}2+{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=13}}1-{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=14}} 1{{/ifvalue}}
+                        {{#ifvalue this.submission.grade value=15}}1+{{/ifvalue}}
+                        </b>
+                    {{/if}}
+                {{else}}
+                    {{#ifvalue this.submission.grade value=0}}
+                        <b class="grade">0 Punkte</b>
+                    {{/ifvalue}}
+                    {{#if this.submission.grade}}
+                        <b class="grade">{{this.submission.grade}} Punkte</b>
+                    {{/if}}
+                {{/if}}
+                <div class="comment">
+                    {{#if this.submission.gradeComment}}
+                        {{{this.submission.gradeComment}}}
+                    {{else}}
+                        <p>Kein Kommentar.</p>
+                    {{/if}}
+                </div>
+            {{/ifvalue}}
+            
 		</div>
 		
 		<div id="student-comment" class="tab-content">
@@ -104,12 +127,23 @@
                         {{#ifvalue this.submissionId value=../this.submission._id}}
                             <li class="comment">
                                 <img class="picture" src="https://randomuser.me/api/portraits/men/3.jpg" alt=""/>
-                                <form action="/homework/comment/{{this._id}}" method="post" class="inline">
-                                    <input type="hidden" name="_method" value="delete"/>
-                                    <button type="submit" class="btn btn-secondary btn-sm">
-                                        <i class="fa fa-trash" aria-hidden="true"></i>
-                                    </button>
-                                </form>
+                                {{#ifvalue @root.teacherId value=@root.currentUser._id}}
+                                    <form action="/homework/comment/{{this._id}}" method="post" class="inline">
+                                        <input type="hidden" name="_method" value="delete"/>
+                                        <button type="submit" class="btn btn-secondary btn-sm">
+                                            <i class="fa fa-trash" aria-hidden="true"></i>
+                                        </button>
+                                    </form>
+                                {{else}}
+                                    {{#ifvalue this.author._id value=@root.currentUser._id}}
+                                        <form action="/homework/comment/{{this._id}}" method="post" class="inline">
+                                            <input type="hidden" name="_method" value="delete"/>
+                                            <button type="submit" class="btn btn-secondary btn-sm">
+                                                <i class="fa fa-trash" aria-hidden="true"></i>
+                                            </button>
+                                        </form>
+                                    {{/ifvalue}}
+                                {{/ifvalue}}
                                 <b class="name">{{this.author.firstName}} {{this.author.lastName}}</b>
                                 <pre>{{this.comment}}</pre>
                             </li>
