--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -1,4 +1,4 @@
-{{#extend "homework/homework"}}
+﻿{{#extend "homework/homework"}}
     {{#content "scripts" mode="append"}}
         <script type="text/javascript">
         $(document).ready(function(){
@@ -64,7 +64,7 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/homework/assignment.css"/>
         <link rel="stylesheet" href="/styles/homework/submissions.css"/>
-        <style>.section-title h4::before{content:"? {{#if private}}?? {{/if}}";color:{{this.color}};</style>
+        <style>.section-title h4::before{content:"● {{#if private}}🔒 {{/if}}";color:{{this.color}};</style>
     {{/content}}
     {{#content "page"}}
 
