--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -6,6 +6,16 @@
 
     {{#content "scripts" mode="append"}}
         <script src="/scripts/loggedin.js" type="text/javascript"></script>
+        <script type="text/javascript" src="https://www.gstatic.com/firebasejs/3.9.0/firebase-app.js"></script>
+        <script type="text/javascript" src="https://www.gstatic.com/firebasejs/3.9.0/firebase-messaging.js"></script>
+        <script type="text/javascript" src="/scripts/notificationService/indexFirebase.js"></script>
+
+        <script type="text/javascript" src="/scripts/notificationService/callback.js"></script>
+        <script type="text/javascript" src="/scripts/notificationService/index.js"></script>
+
+        <script type="text/javascript">
+            setupFirebasePush();
+        </script>
     {{/content}}
 
     {{#content "body"}}
