--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -1,4 +1,4 @@
-@import '../lib/colors.scss';
+﻿@import '../lib/colors.scss';
 @import '../lib/bootstrap/scss/bootstrap';
 
 .route-homework {
@@ -121,14 +121,8 @@
         @include media-breakpoint-down(xs) {
           margin-right: 25px;
         }
-        pre {
-          font: inherit;
-          display: inline;
-          width: 100%;
-          outline: none;
-          border: none;
-          background: transparent;
-          overflow: hidden;
+        p {
+          margin-bottom:.25rem;
         }
       }
       .dates {
