--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -1,4 +1,4 @@
-{{#extend "homework/homework"}}
+﻿{{#extend "homework/homework"}}
     {{#content "scripts" mode="append"}}
         <script type="text/javascript">
         $(document).ready(function(){
@@ -39,9 +39,10 @@
         });
         </script>
         <script src="/vendor/ckeditor/ckeditor.js"></script>
-        <script>if($('.edit-modal').find("textarea")[0]){
-            CKEDITOR.replace($('.edit-modal').find("textarea")[0],{
-                toolbarGroups: [
+        <script>
+            CKEDITOR.replaceAll(function(textarea, config){
+                if (!textarea.classList.contains("customckeditor")) return false; //for only assign a class
+                config.toolbarGroups = [
                     { name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ] },
                     { name: 'paragraph', groups: [ 'list', 'indent', 'blocks', 'align', 'bidi', 'paragraph' ] },
                     { name: 'links', groups: [ 'links' ] },
@@ -55,10 +56,10 @@
                     { name: 'styles', groups: [ 'styles' ] },
                     { name: 'colors', groups: [ 'colors' ] },
                     { name: 'about', groups: [ 'about' ] }
-                ],
-                removeButtons: 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About'
+                ];
+                config.removeButtons = 'Cut,Copy,Paste,PasteText,PasteFromWord,Redo,Undo,Scayt,Anchor,Maximize,Strike,Styles,Format,About';
             });
-        }</script>
+        </script>
     {{/content}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/homework/assignment.css"/>
