fix mobile spacing (#202)
* fix mobile spacing

* change header content

--- a/static/styles/lib/bootstrap/scss/_navbar.scss
+++ b/static/styles/lib/bootstrap/scss/_navbar.scss
@@ -68,6 +68,7 @@
 //
 
 .navbar-brand {
+  @media screen and (max-width: 400px) { display: none; }
   float: left;
   padding-top: $navbar-brand-padding-y;
   padding-bottom: $navbar-brand-padding-y;
