--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -1,4 +1,8 @@
 {{#extend "lib/loggedin"}}
+    {{#content "styles" mode="append"}}
+        <link rel="stylesheet" href="/styles/account/settings.css"/>
+    {{/content}}
+
     {{#content "scripts" mode="append"}}
         <script src="/scripts/settings.js" type="text/javascript"></script>
     {{/content}}
@@ -48,7 +52,62 @@
 
 
             <input type="hidden" name="userId" value="{{userId}}" />
-            <button onclick="pushManager.requestPermission()">Request Permission</button>
         </div>
+
+        <div class="panel-group">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <a data-toggle="collapse" href="#collapse1"><h4><label>Benachrichtigungseinstellungen</label></h4></a>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse">
+
+                    <div class="notification">
+                        {{#if device}}
+                        <table width="100%" cellpadding="5px">
+                            <thead>
+                            <th></th>
+                            <th><label>Name</label></th>
+                            <th><label>Typ</label></th>
+                            <th><label>Betriebssystem</label></th>
+                            </thead>
+                            <tbody>
+                            {{#each device}}
+                                <tr id="{{this._id}}">
+                                    <td>{{#if this.selected}}<a href="/account/settings/device"
+                                           target="_blank"
+                                           data-method="delete"
+                                           data-device-name="{{this.name}}"
+                                           data-device-id="{{this.token}}">
+                                        <i class="fa fa-trash-o"></i></a>
+                                    {{/if}}</td>
+                                    <td class="form-group">{{this.name}}</td>
+                                    <td class="form-group">{{this.type}}</td>
+                                    <td class="form-group">{{this.OS}}</td>
+                                </tr>
+                            {{/each}}
+                            </tbody>
+                        </table>
+                    {{/if}}
+                        <button type="button" class="btn btn-default" onclick="pushManager.requestPermission()">Benachrichtigungen aktivieren</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+            {{#content "body"}}
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-close">
+                        Abbrechen
+                    </button>
+
+                    <button type="submit" class="btn btn-primary btn-submit">
+                        Löschen
+                    </button>
+                </div>
+            {{/content}}
+        {{/embed}}
+
     {{/content}}
 {{/extend}}
