--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -1,6 +1,6 @@
 {{#extend "lib/loggedin"}}
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/settings.js" type="text/javascript"></script>
+        <script src="/scripts/settings.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
