--- a/views/administration/administration.hbs
+++ b/views/administration/administration.hbs
@@ -1,5 +1,5 @@
 {{#extend "lib/loggedin"}}
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/administration.js" type="text/javascript"></script>
+        <script src="/scripts/administration.js" type="text/javascript" defer></script>
     {{/content}}
 {{/extend}}
