--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -5,7 +5,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/login.js" type="text/javascript"></script>
+        <script src="/scripts/login.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "body"}}
