--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -5,13 +5,15 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/moment/moment.js" type="text/javascript"></script>
+        <script src="/scripts/moment/moment.js" type="text/javascript" defer></script>
         <script>
-            moment().format();
+            window.addEventListener('DOMContentLoaded', function() {
+                moment().format();
+            });
         </script>
-        <script src="/scripts/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
-        <script src="/scripts/fullcalendar/de.js" type="text/javascript"></script>
-        <script src="/scripts/calendar.js" type="text/javascript"></script>
+        <script src="/scripts/fullcalendar/fullcalendar.min.js" type="text/javascript" defer></script>
+        <script src="/scripts/fullcalendar/de.js" type="text/javascript" defer></script>
+        <script src="/scripts/calendar.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
