--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -135,7 +135,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/chosen/chosen.jquery.min.js"></script>
-        <script src="/scripts/content.js" type="text/javascript"></script>
+        <script src="/scripts/chosen/chosen.jquery.min.js" defer></script>
+        <script src="/scripts/content.js" type="text/javascript" defer></script>
     {{/content}}
 {{/extend}}
