--- a/views/courses/add-tool.hbs
+++ b/views/courses/add-tool.hbs
@@ -35,6 +35,6 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/tools.js" type="text/javascript"></script>
+        <script src="/scripts/tools.js" type="text/javascript" defer></script>
     {{/content}}
 {{/extend}}
