--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -5,7 +5,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/courses.js" type="text/javascript"></script>
+        <script src="/scripts/courses.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
