--- a/views/homework/homework.hbs
+++ b/views/homework/homework.hbs
@@ -1,5 +1,5 @@
 {{#extend "lib/loggedin"}}
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/homework.js" type="text/javascript"></script>
+        <script src="/scripts/homework.js" type="text/javascript" defer></script>
     {{/content}}
 {{/extend}}
