--- a/views/pwRecovery/pwrecovery.hbs
+++ b/views/pwRecovery/pwrecovery.hbs
@@ -4,7 +4,7 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/pwrecovery.js" type="text/javascript"></script>
+        <script src="/scripts/pwrecovery.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "body"}}
