--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -17,6 +17,8 @@
         <link rel="preload" href="/fonts/ptsans/ptsans-italic.woff" as="font" type="font/woff" crossorigin>
         <link rel="preload" href="/fonts/fontawesome/fontawesome-webfont.woff" as="font" type="font/woff" crossorigin>
 
+        <link rel="preload" href="/images/hpi-logo.png" as="image" crossorigin>
+
         <link rel="apple-touch-icon" href= "/images/webapp.png">
         <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
         <link rel="stylesheet" href="/fonts/fontawesome/fontawesome.css" />
