--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -1,8 +1,7 @@
 <header>
     <div class="container-fluid">
         <nav class="navbar navbar-light">
-            <a class="navbar-brand" href="/">
-            Schul-Cloud</a>
+            <a class="navbar-brand" href="/">Schul-Cloud</a>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank">Blog</a>
