delete personal events

--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -21,9 +21,20 @@
             <div class="fullcalendar" id="calendar"></div>
         </div>
 
-        {{#embed "lib/components/modal-form" class="create-event-modal"}}
+        {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/"}}
             {{#content "fields"}}
                 {{> "calendar/forms/form-create-event"}}
+            {{/content}}
+        {{/embed}}
+
+        {{#embed "lib/components/modal-form" class="edit-event-modal"}}
+            {{#content "fields"}}
+                {{> "calendar/forms/form-create-event"}}
+            {{/content}}
+            {{#content "additional-actions"}}
+                    <button type="button" class="btn btn-primary btn-danger btn-delete">
+                        Löschen
+                    </button>
             {{/content}}
         {{/embed}}
     {{/content}}
