--- a/views/lib/components/modal-form.hbs
+++ b/views/lib/components/modal-form.hbs
@@ -13,6 +13,8 @@
                     {{closeLabel}}
                 </button>
 
+                {{#block "additional-actions"}}{{/block}}
+
                 <button type="submit" class="btn btn-primary btn-submit">
                     {{submitLabel}}
                 </button>
