--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -63,8 +63,8 @@
 
                         <li class="nav-item notification-dropdown">
                             <div class="dropdown show">
-                                <a class="btn btn-secondary btn-thin dropdown-toggle {{#if recentNotification}}highlighted{{/if}}" data-toggle="dropdown">
-                                    <i class="fa fa-bolt"></i>
+                                <a class="btn btn-secondary btn-thin dropdown-toggle {{#if recentNotifications}}recent{{/if}}" data-toggle="dropdown">
+                                    <i class="fa fa-bolt"></i> {{#if recentNotifications}}<span class="tag tag-primary">{{recentNotifications}}</span>{{/if}}
                                 </a>
 
                                 <div class="dropdown-menu">
