--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -86,7 +86,7 @@
                     </tbody>
                 </table>
             {{/if}}
-            <button type="button" class="btn btn-default" onclick="pushManager.requestPermission()">Benachrichtigungen
+            <button type="button" class="btn btn-default btn-device" onclick="pushManager.requestPermission()">Benachrichtigungen
                 aktivieren
             </button>
         </div>
